api 50%
